aggiungo rettangoli di base

--- a/index.html
+++ b/index.html
@@ -10,17 +10,29 @@
 <body>
     <!-- inizio header -->
     <header>
+    <div class="pink">
 
+    </div>
     </header>
     <!-- fine header -->
     <!-- inizio main -->
     <main>
+        <div class="yellow">
+
+        </div>
+        <div class="celeste">
+           
+
+           
+        </div>
 
     </main>
     <!-- fine main -->
     <!-- inizio footer -->
     <footer>
+      <div class="viola">
 
+      </div>
     </footer>
     <!-- fine footer -->
 </body>
