--- a/index.html
+++ b/index.html
@@ -20,9 +20,30 @@
         <div class="yellow">
 
         </div>
-        <div class="celeste">
-           
+        <div class="blue">
+            <div class="contenitore">
+                 <!-- sezione superiore -->
+            <section class="superiore">
 
+            </section>
+            <!-- fine sezione superiore -->
+            <!-- inizio sezione sinistra -->
+            <section class="sinistra">
+
+            </section>
+           <!-- fine sezione sinistra -->
+           <!-- inizio sezione centro -->
+           <section class="centro">
+
+           </section>
+           <!-- fine sezione centro -->
+           <!-- inizio sezione destra -->
+           <section class="destra">
+
+           </section>
+           <!-- fine sezione sinistra -->
+
+            </div>
            
         </div>
 
